fix table on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -27,7 +27,7 @@ header h1.page-title {
 }
 
 .table-wrapper {
-  width: 70%;
+  width: 68%;
 }
 
 .textwrap {
